Fix overflow issue of the right side of the page

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 body {
   margin: 0;
   padding: 0;
-  min-width: 100vw;
-  min-height: 100vh;
+  /* min-width: 100vw;
+  min-height: 100vh; */
   background-color: whitesmoke;
 }
 
@@ -32,7 +32,7 @@ body {
   background-size: cover;
   background-position: left;
   height: 100%;
-  width: 40%;
+  width: 35%;
   justify-content: center;
   align-items: center;
 }
@@ -44,16 +44,17 @@ body {
   background-color: hsl(0,0%,0%, 0.5);
   font-size: 2cm;
   width: 100%;
-  height: 100px;
+  height: 150px;
   text-align: center;
   position: relative;
+  padding-bottom: 20px;
 }
 
 .left h1::before {
   content: url('image/odin-lined.png');
-  zoom: 15%;
+  zoom: 23%;
   position: relative;
-  top: 50px;
+  top: 80px;
 }
 
 .left footer {
@@ -62,10 +63,12 @@ body {
 }
 
 .right {
-  height: 100%;
-  width: 60%;
+  height: 100vh;
+  width: 65%;
   display: flex;
   flex-direction: column;
+  flex: 1;
+  overflow: scroll;
 }
 
 .header h2 {
@@ -83,24 +86,29 @@ body {
   margin-top: 250px;
 }
 
-/* form {
-  height: 55vh;
-} */
+form {
+  width: 100%;
+}
 
 fieldset {
   display: flex;
-  flex-wrap: wrap;
-  height: 410px;
+  flex-direction: column;
   background-color: white;
   border: none;
   position: relative;
+  flex: 1;
+  padding-bottom: 60px;
+}
+
+.row {
+  display: flex;
 }
 
 legend {
   position: relative;
   left: 38px;
-  top: 30px;
-  margin-bottom: 30px;
+  top: 50px;
+  margin-bottom: 50px;
   font-size: 1.2rem;
   font-weight: bolder;
 }
@@ -112,6 +120,11 @@ input {
   border-color: gray;
   border-style: solid;
   font-size: 0.8rem;
+  border-color: hsl(0,0%,0%, 0.2);
+}
+
+fieldset > div.row {
+  flex-wrap: wrap;
 }
 
 fieldset div > label {
@@ -120,6 +133,7 @@ fieldset div > label {
   font-size: medium;
   opacity: 0.6;
   font-weight: bold;
+  opacity: 0.4;
 }
 
 label, input {
@@ -128,7 +142,9 @@ label, input {
 }
 
 input:focus {
-  border: blue solid;
+  border: black solid;
+  outline: none;
+  box-shadow: 3px 3px 2px;
 }
 
 button[type="submit"] {
@@ -162,4 +178,15 @@ button[type="submit"] {
   font-size: 1.1rem
 }
 
+/* input:invalid:required {
+  border: red solid;
+}
 
+input:valid:required {
+  border: blue solid;
+} */
+
+a {
+    text-decoration: none;
+    color: white; 
+}
